Add new error and function `user-error'. * lisp/subr.el (user-error): New function. * lisp/window.el (switch-to-buffer): * lisp/vc/smerge-mode.el (smerge-resolve-function, smerge-resolve) (smerge-match-conflict): * lisp/simple.el (previous-matching-history-element) (next-matching-history-element, goto-history-element, undo-more) (undo-start): * lisp/progmodes/etags.el (visit-tags-table-buffer, find-tag-tag) (find-tag-noselect, find-tag-in-order, etags-goto-tag-location) (next-file, tags-loop-scan, list-tags, complete-tag): * lisp/progmodes/compile.el (compilation-loop): * lisp/mouse.el (mouse-minibuffer-check): * lisp/man.el (Man-bgproc-sentinel, Man-goto-page): * lisp/info.el (Info-find-node-2, Info-extract-pointer, Info-history-back) (Info-history-forward, Info-follow-reference, Info-menu) (Info-extract-menu-item, Info-extract-menu-counting) (Info-forward-node, Info-backward-node, Info-next-menu-item) (Info-last-menu-item, Info-next-preorder, Info-last-preorder) (Info-next-reference, Info-prev-reference, Info-index) (Info-index-next, Info-follow-nearest-node) (Info-copy-current-node-name): * lisp/imenu.el (imenu--make-index-alist) (imenu-default-create-index-function, imenu-add-to-menubar): * lisp/files.el (basic-save-buffer, recover-file): * lisp/emacs-lisp/easy-mmode.el (easy-mmode-define-navigation): * lisp/emacs-lisp/checkdoc.el (checkdoc-continue, checkdoc-comments) (checkdoc-message-text, checkdoc-defun): * lisp/dabbrev.el (dabbrev-completion, dabbrev--abbrev-at-point): * lisp/cus-edit.el (customize-changed-options, customize-rogue) (customize-saved, custom-variable-set, custom-variable-mark-to-save) (custom-variable-mark-to-reset-standard) (custom-variable-reset-backup, custom-face-mark-to-reset-standard) (custom-file): * lisp/completion.el (check-completion-length): * lisp/comint.el (comint-search-arg) (comint-previous-matching-input-string-position) (comint-previous-matching-input) (comint-replace-by-expanded-history-before-point, comint-send-input) (comi

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -438,7 +438,7 @@
 
 2012-01-09  Chong Yidong  <cyd@gnu.org>
 
-	* custom.texi (Custom Themes): Switched custom-safe-themes to use
+	* custom.texi (Custom Themes): Switch custom-safe-themes to use
 	SHA-256.
 
 2012-01-07  Chong Yidong  <cyd@gnu.org>
@@ -455,8 +455,8 @@
 	(Screen Garbled): Don't refer to terminal "manufacturers".
 	(Total Frustration): Node deleted.  Eliza is documented in
 	Amusements now.
-	(Known Problems): More info about using the bug tracker.  Mention
-	debbugs package.
+	(Known Problems): More info about using the bug tracker.
+	Mention debbugs package.
 	(Bug Criteria): Copyedits.
 	(Understanding Bug Reporting): Mention emacs -Q.
 
@@ -519,8 +519,8 @@
 	Document browse-url-mailto-function.
 	(Goto Address mode): Add index entries.  Add xref to Browse-URL.
 	(FFAP): FFAP is not a minor mode.
-	(Amusements): M-x lm was renamed to M-x landmark.  Document
-	nato-region.
+	(Amusements): M-x lm was renamed to M-x landmark.
+	Document nato-region.
 
 2012-01-01  Chong Yidong  <cyd@gnu.org>
 
@@ -558,8 +558,8 @@
 
 2011-12-26  Chong Yidong  <cyd@gnu.org>
 
-	* dired.texi (Dired Enter, Misc Dired Features): Document
-	dired-use-ls-dired changes.  Mention quit-window.
+	* dired.texi (Dired Enter, Misc Dired Features):
+	Document dired-use-ls-dired changes.  Mention quit-window.
 	(Dired Navigation): Add index entries.
 	(Dired Visiting): Fix View Mode xref.
 	(Marks vs Flags): Prefer C-/ binding for undo.
@@ -602,8 +602,8 @@
 
 	* vc1-xtra.texi (Version Headers): Note that these are for
 	Subversion, CVS, etc. only.
-	(General VC Options): De-document vc-keep-workfiles.  Fix
-	RCS-isms.
+	(General VC Options): De-document vc-keep-workfiles.
+	Fix RCS-isms.
 
 2011-12-22  Eli Zaretskii  <eliz@gnu.org>
 
@@ -619,8 +619,8 @@
 
 	* vc1-xtra.texi (Remote Repositories): Update introduction.
 	(Local Version Control): Node deleted (obsolete with DVCSes).
-	(Remote Repositories, Version Backups): Node deleted.  Move
-	documentation of vc-cvs-stay-local to CVS Options.
+	(Remote Repositories, Version Backups): Node deleted.
+	Move documentation of vc-cvs-stay-local to CVS Options.
 	(CVS Options): Reduce verbosity of description of obscure CVS
 	locking feature.
 	(Making Revision Tags, Revision Tag Caveats): Merge into Revision
@@ -673,11 +673,11 @@
 	less CVS-specific.
 	(VC With A Merging VCS, VC With A Locking VCS): Add xref to
 	Registering node.
-	(Secondary VC Commands): Deleted.  Promote subnodes.
+	(Secondary VC Commands): Delete.  Promote subnodes.
 	(Log Buffer): Add command name for C-c C-c.  Fix the name of the
 	log buffer.  Add index entries.
-	(VCS Changesets, Types of Log File, VC With A Merging VCS): Use
-	"commit" terminology.
+	(VCS Changesets, Types of Log File, VC With A Merging VCS):
+	Use "commit" terminology.
 	(Old Revisions): Move it to just before VC Change Log.  "Tag" here
 	doesn't refer to tags tables.  Note other possible forms of the
 	revision ID.  C-x v = does not save.
@@ -702,8 +702,8 @@
 	(Lisp Eval): Note that listed commands are available globally.
 	Explain the meaning of "defun" in the C-M-x context.
 	(Lisp Interaction): Copyedits.
-	(External Lisp): Fix name of inferior Lisp buffer.  Mention
-	Scheme.
+	(External Lisp): Fix name of inferior Lisp buffer.
+	Mention Scheme.
 	(Compilation): Define "inferior process".
 
 2011-12-10  Eli Zaretskii  <eliz@gnu.org>
@@ -718,8 +718,8 @@
 	(Compilation Mode): Add xref for grep, occur, and mouse
 	references.  Define "locus".
 	(Grep Searching): Use @command.
-	(Debuggers, Commands of GUD, GDB Graphical Interface): Clarify
-	intro.
+	(Debuggers, Commands of GUD, GDB Graphical Interface):
+	Clarify intro.
 	(Starting GUD): Clarify how arguments are specified.
 	(Debugger Operation): Index entry for "GUD interaction buffer",
 	and move basic description here from Commands of GUD node.
@@ -727,8 +727,8 @@
 	(Source Buffers): Remove gdb-find-source-frame, which is not in
 	gdb-mi.el.
 	(Other GDB Buffers): Remove gdb-use-separate-io-buffer and
-	toggle-gdb-all-registers, which are not in gdb-mi.el.  Don't
-	re-document GUD interaction buffers.
+	toggle-gdb-all-registers, which are not in gdb-mi.el.
+	Don't re-document GUD interaction buffers.
 
 	* programs.texi (Symbol Completion): M-TAB can now use Semantic.
 	(Semantic): Add cindex entries for Semantic.
@@ -758,8 +758,8 @@
 
 	* programs.texi (Program Modes): Mention modes that are not
 	included with Emacs.  Fix references to other manuals for tex.
-	Add index entry for backward-delete-char-untabify.  Mention
-	prog-mode-hook.
+	Add index entry for backward-delete-char-untabify.
+	Mention prog-mode-hook.
 	(Which Function): Use "global minor mode" terminology.
 	(Basic Indent, Multi-line Indent): Refer to previous descriptions
 	in Indentation chapter to avoid duplication.
@@ -791,12 +791,12 @@
 	(TeX Editing): Add xref to documentation for Occur.
 	(LaTeX Editing): Add xref to Completion node.
 	(TeX Print): Fix description of tex-directory.
-	(Enriched Text): Renamed from Formatted Text.  Make this node and
+	(Enriched Text): Rename from Formatted Text.  Make this node and
 	its subnodes less verbose, since text/enriched files are
 	practically unused.
-	(Enriched Mode): Renamed from Requesting Formatted Text.
+	(Enriched Mode): Rename from Requesting Formatted Text.
 	(Format Colors): Node deleted.
-	(Enriched Faces): Renamed from Format Faces.  Describe commands
+	(Enriched Faces): Rename from Format Faces.  Describe commands
 	for applying colors too.
 	(Forcing Enriched Mode): Node deleted; merged into Enriched Mode.
 
@@ -1031,12 +1031,12 @@
 2011-10-18  Chong Yidong  <cyd@gnu.org>
 
 	* display.texi (Faces): Simplify discussion.  Move documentation
-	of list-faces-display here, from Standard Faces node.  Note
-	special role of `default' background.
-	(Standard Faces): Note special role of `default' background.  Note
-	that region face may be taken fom GTK.  Add xref to Text Display.
-	(Text Scale): Rename from "Temporary Face Changes".  Callers
-	changed.  Don't bother documenting variable-pitch-mode.
+	of list-faces-display here, from Standard Faces node.
+	Note special role of `default' background.
+	(Standard Faces): Note special role of `default' background.
+	Note that region face may be taken fom GTK.  Add xref to Text Display.
+	(Text Scale): Rename from "Temporary Face Changes".
+	Callers changed.  Don't bother documenting variable-pitch-mode.
 	(Font Lock): Copyedits.  Remove font-lock-maximum-size.
 	(Useless Whitespace): Simplify description of
 	delete-trailing-whitespace.  Note active region case.
@@ -1058,8 +1058,8 @@
 
 2011-10-13  Chong Yidong  <cyd@stupidchicken.com>
 
-	* killing.texi (Deletion): Add xref to Using Region.  Document
-	delete-forward-char.
+	* killing.texi (Deletion): Add xref to Using Region.
+	Document delete-forward-char.
 	(Yanking): Move yank-excluded-properties to Lisp manual.  Move C-y
 	description here.  Recommend C-u C-SPC for jumping to mark.
 	(Kill Ring): Move kill ring variable documentation here.
@@ -1079,10 +1079,10 @@
 	selection changes.  Mention that commands like C-y set the mark.
 	(Marking Objects): Add xref to Words node.  Note that mark-word
 	and mark-sexp also have the "extend region" behavior.
-	(Using Region): Mention M-$ in the table.  Document
-	mark-even-if-inactive here instead of in Mark Ring.
-	(Mark Ring): Move mark-even-if-inactive to Using Region.  Take
-	note of the "Mark Set" behavior.
+	(Using Region): Mention M-$ in the table.
+	Document mark-even-if-inactive here instead of in Mark Ring.
+	(Mark Ring): Move mark-even-if-inactive to Using Region.
+	Take note of the "Mark Set" behavior.
 	(Disabled Transient Mark): Rename from "Persistent Mark"
 	(Bug#9688).  Callers changed.
 
@@ -1097,8 +1097,8 @@
 	(Name Help): Remove an over-long joke.
 	(Apropos): Document prefix args.  Remove duplicated descriptions.
 	(Help Mode): Add C-c C-b to table.  Update TAB binding.
-	(Package Keywords): Rename from "Library by Keyword".  Describe
-	new package menu interface.
+	(Package Keywords): Rename from "Library by Keyword".
+	Describe new package menu interface.
 	(Help Files, Help Echo): Tweak description.
 
 	* mini.texi (Completion Options): Add completion-cycle-threshold.
@@ -1110,8 +1110,8 @@
 
 2011-10-08  Chong Yidong  <cyd@stupidchicken.com>
 
-	* basic.texi (Position Info): Omit page commands.  Document
-	count-words-region and count-words.
+	* basic.texi (Position Info): Omit page commands.
+	Document count-words-region and count-words.
 
 	* text.texi (Pages): Move what-page documentation here.
 
@@ -1134,8 +1134,8 @@
 
 2011-10-07  Chong Yidong  <cyd@stupidchicken.com>
 
-	* basic.texi (Inserting Text): Add xref to Completion.  Add
-	ucs-insert example, and document prefix argument.
+	* basic.texi (Inserting Text): Add xref to Completion.
+	Add ucs-insert example, and document prefix argument.
 	(Moving Point): Fix introduction; C-f/C-b are no longer equivalent
 	to left/right.  Tweak left-char and right-char descriptions.
 	M-left and M-right are now bound to left-word/right-word.
@@ -1539,8 +1539,8 @@
 
 2011-04-24  Chong Yidong  <cyd@stupidchicken.com>
 
-	* maintaining.texi (List Tags): Document next-file.  Suggested by
-	Uday S Reddy.
+	* maintaining.texi (List Tags): Document next-file.
+	Suggested by Uday S Reddy.
 
 2011-04-23  Juanma Barranquero  <lekktu@gmail.com>
 
