--- a/etc/NEWS
+++ b/etc/NEWS
@@ -199,6 +199,7 @@ still be supported for Emacs 24.x.
 
 * Lisp changes in Emacs 24.2
 
+** New error type and new function `user-error'.  Doesn't trigger the debugger.
 ** Completion
 
 *** New function `completion-table-with-quoting' to handle completion
