--- a/doc/lispref/streams.texi
+++ b/doc/lispref/streams.texi
@@ -1,6 +1,6 @@
 @c -*-texinfo-*-
 @c This is part of the GNU Emacs Lisp Reference Manual.
-@c Copyright (C) 1990-1994, 1998-1999, 2001-2012  Free Software Foundation, Inc.
+@c Copyright (C) 1990-1994, 1998-1999, 2001-2012 Free Software Foundation, Inc.
 @c See the file elisp.texi for copying conditions.
 @setfilename ../../info/streams
 @node Read and Print, Minibuffers, Debugging, Top
@@ -813,7 +813,6 @@ reader to produce an uninterned symbol.
 If non-@code{nil}, that means number continuously across print calls.
 This affects the numbers printed for @samp{#@var{n}=} labels and
 @samp{#@var{m}#} references.
-
 Don't set this variable with @code{setq}; you should only bind it
 temporarily to @code{t} with @code{let}.  When you do that, you should
 also bind @code{print-number-table} to @code{nil}.
@@ -826,8 +825,8 @@ to bind it to @code{nil} when you bind @code{print-continuous-numbering}.
 @end defvar
 
 @defvar float-output-format
-This variable specifies how to print floating point numbers.  Its
-default value is @code{nil}, meaning use the shortest output
+This variable specifies how to print floating point numbers.  The
+default is @code{nil}, meaning use the shortest output
 that represents the number without losing information.
 
 To control output format more precisely, you can put a string in this
