--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (setq-local, defvar-local): New macros.
+	(kbd): Redefine as an alias.
+	(with-selected-window): Leave unrelated frames alone.
+	(set-temporary-overlay-map): New function.
+
 2012-05-04  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* subr.el (user-error): New function.
