--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-05  Chong Yidong  <cyd@gnu.org>
+
+	* emacs-lisp/package.el (package-buffer-info): Avoid putting local
+	variables into description.
+
 2012-05-05  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* shell.el (shell-completion-vars): Set pcomplete-arg-quote-list like
