--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-05-05  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32proc.c (new_child): Force Windows to reserve only 64KB of
+	stack for each reader_thread, instead of defaulting to 8MB
+	determined by the linker.  This avoids failures in creating
+	subprocesses on Windows 7, see the discussion in this thread:
+	http://lists.gnu.org/archive/html/emacs-devel/2012-03/msg00119.html.
+
 2012-05-02  Jim Meyering  <meyering@redhat.com>
 
 	* w32font.c (fill_in_logfont): NUL-terminate a string (Bug#11372).
