--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-05  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* configure.in: Fix last change.
+
 2012-05-02  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (uninstall): Remove useless-use-of-for; that for
