--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-05  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* configure.in: Fix quoting bugs.
+
 2012-05-04  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in (INFO_EXT, INFO_OPTS): New output variables.
