--- a/etc/NEWS
+++ b/etc/NEWS
@@ -94,6 +94,10 @@ see the `apropos' Custom group for details.
 **** The old options whose values specified faces to use were removed
 (i.e. `apropos-symbol-face', `apropos-keybinding-face', etc.).
 
+** Calendar
+
+*** The calendars produced by cal-html can optionally include holidays.
+
 ** Customize
 
 *** `custom-reset-button-menu' now defaults to t.
