* emacs-lisp/package.el (package-built-in-p): Handle `emacs' package.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-06  Chong Yidong  <cyd@gnu.org>
+
+	* emacs-lisp/package.el (package-built-in-p): Handle the `emacs'
+	package (Bug#11410).
+
 2012-05-05  Chong Yidong  <cyd@gnu.org>
 
 	* emacs-lisp/package.el (package-buffer-info): Avoid putting local
