Improvements for Tabulated List mode.
* lisp/emacs-lisp/tabulated-list.el (tabulated-list-format): Accept
additional plist in column descriptors.
(tabulated-list-init-header): Obey it.
(tabulated-list-get-entry): New function.
(tabulated-list-put-tag): Use it.  Use string-width instead of
length.
(tabulated-list--column-number): New function.
(tabulated-list-print): Use it.
(tabulated-list-print-col): New function.  Set
`tabulated-list-column-name' property on each column's text.
(tabulated-list-print-entry): Use it.
(tabulated-list-delete-entry, tabulated-list-set-col): New
functions.
(tabulated-list-sort-column): New command.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -161,6 +161,11 @@ details.
 The function `notifications-get-capabilities' returns the supported
 server properties.
 
+** Tabulated List and packages derived from it
+
+*** New command `tabulated-list-sort-column' bound to `S' sorts column
+at point, or the Nth column if a numeric prefix argument is given.
+
 ** Obsolete packages:
 
 *** assoc.el
