--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,18 +1,23 @@
+2012-05-06  Christopher Schmidt  <christopher@ch.ristopher.com>
+
+	* emacs-lisp/cl-macs.el (cl-expr-contains): Handle cons cells
+	whose cdr is not a cons cell correctly (bug#11038).
+
 2012-05-06  Chong Yidong  <cyd@gnu.org>
 
-	* emacs-lisp/tabulated-list.el (tabulated-list-format): Accept
-	additional plist in column descriptors.
+	* emacs-lisp/tabulated-list.el (tabulated-list-format):
+	Accept additional plist in column descriptors.
 	(tabulated-list-init-header): Obey it.
 	(tabulated-list-get-entry): New function.
 	(tabulated-list-put-tag): Use it.  Use string-width instead of
 	length.
 	(tabulated-list--column-number): New function.
 	(tabulated-list-print): Use it.
-	(tabulated-list-print-col): New function.  Set
-	`tabulated-list-column-name' property on each column's text.
+	(tabulated-list-print-col): New function.
+	Set `tabulated-list-column-name' property on each column's text.
 	(tabulated-list-print-entry): Use it.
-	(tabulated-list-delete-entry, tabulated-list-set-col): New
-	functions.
+	(tabulated-list-delete-entry, tabulated-list-set-col):
+	New functions.
 	(tabulated-list-sort-column): New command (Bug#11337).
 
 	* buff-menu.el (list-buffers): Move C-x C-b binding from
